Add ui for list

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,3 +1,4 @@
+/* <!-- DGL 103 CVS1 - Sumit Joshi - Project -- */
 /* Resetting default font size to 62.5% for easier rem calculations */
 html {
   font-size: 62.5%;
@@ -756,6 +757,52 @@ select {
   width: 200px;
   margin-top: 16px;
 }
+/* CSS for modal */
+.section-custom-suit__modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 25%;
+  top: 0;
+  width: 50%;
+  height: 100%;
+  overflow: auto;
+  background-color: var(#000);
+}
+
+/* Modal content */
+.section-custom-suit__modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.section-custom-suit__modal div {
+  text-align: center;
+}
+
+.section-custom-suit__modal img {
+  height: 350px;
+}
+
+/* Close button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 
 /* Media query for screens with a minimum width of 1200px */
 @media only screen and (min-width: 1200px) {
